--- a/homework4.css
+++ b/homework4.css
@@ -1,3 +1,12 @@
+html {
+    font-size: 1rem;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+body {
+    background-color: pink;
+}
+
 .sidebyside {
     display: flex;
     gap: 32px;
@@ -10,11 +19,42 @@
     margin: 16px;
 }
 
-h1 {
+#bigheader {
     text-align: center;
+    color: yellow;
+    font-size: 3rem;
 }
 
 img {
     max-width: 1fr;
     height: auto;
+}
+
+#foodimg:hover, #cockimg:hover {
+    opacity: 75%;
+    transition: 0.3s;
+}
+
+#titlefood, #titlecocktail {
+    font-size: 1.5rem;
+}
+
+#category {
+    font-size: 1.125rem;
+}
+
+#ingredients, #ingredientscocktail {
+    font-size: 1.5rem;
+}
+
+#ingredients > li {
+    font-size: rem;
+}
+
+#instructionshead, #ingredientshead, #ingredientscocktailhead {
+    font-size: 1.25rem;
+}
+
+#instructions {
+    font-size: rem;
 }
