--- a/homework4.css
+++ b/homework4.css
@@ -5,7 +5,7 @@ html {
 
 body {
     background-color: pink;
-    margin: 100px 200px;
+    margin: 50px 100px;
 }
 
 .sidebyside {
@@ -26,8 +26,9 @@ body {
 }
 
 img {
-    max-width: 1fr;
-    height: auto;
+    width: 700px;
+    height: 500px;
+    object-fit: cover;
 }
 
 #foodimg:hover, #cockimg:hover {
